--- a/Android/FamilyParking/app/build.gradle
+++ b/Android/FamilyParking/app/build.gradle
@@ -20,7 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
