--- a/Android/FamilyParking/app/build.gradle
+++ b/Android/FamilyParking/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.google.code.gson:gson:2.3.1'
+
+    compile 'org.lucasr.twowayview:twowayview:0.1.4'
 }
