--- a/Android/FamilyParking2/app/build.gradle
+++ b/Android/FamilyParking2/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
+    compile 'com.pnikosis:materialish-progress:1.4'
 }
