--- a/Android/FamilyParking2/app/build.gradle
+++ b/Android/FamilyParking2/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
     compile 'com.pnikosis:materialish-progress:1.4'
+    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
 }
