--- a/Android/FamilyParking2/app/build.gradle
+++ b/Android/FamilyParking2/app/build.gradle
@@ -4,6 +4,11 @@ android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
+    packagingOptions{
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
     defaultConfig {
         applicationId "it.familiyparking.app"
         minSdkVersion 15
@@ -27,4 +32,5 @@ dependencies {
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
     compile 'com.pnikosis:materialish-progress:1.4'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile 'joda-time:joda-time:2.7'
 }
