--- a/Android/FamilyParking2/app/src/main/AndroidManifest.xml
+++ b/Android/FamilyParking2/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
     <uses-permission android:name="it.familiyparking.app.permission.C2D_MESSAGE" />
 
     <application
+        android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
@@ -71,10 +72,6 @@
         </receiver>
 
         <service
-            android:name=".parky.ServiceBluetooth"
-            android:process=":bluetooth"/>
-
-        <service
             android:name=".parky.ServiceStatistic"
             android:process=":statistics"/>
 
@@ -94,6 +91,8 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.bluetooth.BluetoothDevice.ACTION_ACL_CONNECTED" />
                 <action android:name="android.bluetooth.BluetoothDevice.ACTION_ACL_DISCONNECTED" />
+                <action android:name="android.bluetooth.device.action.ACL_CONNECTED" />
+                <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED" />
             </intent-filter>
         </receiver>
 
