--- a/Android/FamilyParking2/app/src/main/AndroidManifest.xml
+++ b/Android/FamilyParking2/app/src/main/AndroidManifest.xml
@@ -59,6 +59,16 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".widget.WidgetActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTransparentTheme"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <receiver
             android:name=".widget.Widget"
             android:icon="@drawable/logo"
