--- a/iOS/FamilyParking/familyparking/Info.plist
+++ b/iOS/FamilyParking/familyparking/Info.plist
@@ -12,8 +12,6 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>Family Parking</string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Family Parking need GPS to run</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -24,6 +22,15 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Family Parking need GPS to run</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Activate it for using iBeacon</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>bluetooth-central</string>
+		<string>bluetooth-peripheral</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
