--- a/Android/FamilyParking/app/src/main/AndroidManifest.xml
+++ b/Android/FamilyParking/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -54,6 +55,7 @@
         <activity
             android:name=".parky.StatisticActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -64,6 +66,7 @@
             android:name=".widget.WidgetActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTransparentTheme"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
