--- a/Android/FamilyParking/app/build.gradle
+++ b/Android/FamilyParking/app/build.gradle
@@ -31,6 +31,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'org.lucasr.twowayview:twowayview:0.1.4'
     compile 'com.pnikosis:materialish-progress:1.4'
-    compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile 'commons-io:commons-io:2.4'
     compile 'joda-time:joda-time:2.7'
 }
