--- a/Android/FamilyParking/app/src/main/AndroidManifest.xml
+++ b/Android/FamilyParking/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="it.familiyparking.app"
-    android:versionCode="2"
-    android:versionName="1.0.1">
+    android:versionCode="1"
+    android:versionName="1.0.3">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -22,7 +22,8 @@
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
 
 
-    <permission android:name="it.familiyparking.app.permission.C2D_MESSAGE"
+    <permission
+        android:name="it.familiyparking.app.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
     <uses-permission android:name="it.familiyparking.app.permission.C2D_MESSAGE" />
 
@@ -38,9 +39,14 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_key" />
 
         <activity
             android:name=".MainActivity"
